<resources>
    <string name="app_name">Unscripted</string>
    <!--MAIN Screen-->
    <string name="morning_greeting">Good morning </string>
    <string name="day_greeting">Good day </string>
    <string name="evening_greeting">Good evening </string>
    <string name="night_greeting">Good night </string>
    <string name="recent">Entries:</string>
    <string name="all"><u>See All</u></string>
    <string name="add">Add</string>
    <!--LOGIN Screen-->
    <string name="login_register"><u>Register</u></string>
    <string name="tv_login_title_text">Welcome!</string>
    <string name="et_login_email_hint">Email</string>
    <string name="et_login_password_hint">Password</string>
    <string name="btn_login_login_text">LOGIN</string>
    <string name="errormessage_login_email">Please enter an email address!</string>
    <string name="errormessage_login_password">Please enter a password!</string>
    <string name="tv_login_donthaveanaccount_text">Don\'t have an account?</string>
    <string name="tv_login_register_text"><u>Register</u></string>
    <string name="tv_login_forgotpassword_text"><u>Forgot Password?</u></string>
    <string name="tv_register_title_text">CREATE AN ACCOUNT</string>
    <string name="til_register_firstname_hint">First Name</string>
    <string name="til_lastname_hint">Last name</string>
    <string name="til_register_confirmpassword_hint">Confirm Password</string>
    <string name="cb_register_termsandcondition_text">I Agree to the <u>Terms and Conditions</u></string>
    <!--REGISTER Screen-->
    <string name="btn_register_register_text">REGISTER</string>
    <string name="tv_register_alreadyhaveanaccount_text">Already have an account?</string>
    <string name="tv_register_login_text"><u>Login</u></string>
    <string name="infomessage_forgotpassword_emailtoresetsend">Password has been reset.</string>
    <string name="errormessage_forgotpassword_emailtoresetsend">An error occured.</string>
    <string name="errormessage_registration_firstName">Please enter a first name.</string>
    <string name="errormessage_registration_lastName">Please enter a last name.</string>
    <string name="errormessage_registration_email">Please enter a email.</string>
    <string name="errormessage_registration_password">Please enter a password</string>
    <string name="errormessage_registration_confirmpassword">Please confirm your password.</string>
    <string name="errormessage_registration_match_confirmpassword">Password and confirm password do not match.</string>
    <string name="errormessage_registration_terms">Please agree to terms and conditions.</string>
    <string name="til_register_lastname_hint">Lastname</string>
    <!--FORGET PASSWORD Screen-->
    <string name="tv_forgotpassword_title_text">FORGOT PASSWORD</string>
    <string name="tv_forgotpassword_description_text">Please enter your e-mail and we\'ll send you an email to reset your password</string>
    <string name="btn_forgotpassword_submit_text">SUBMIT</string>
    <string name="tv_login_slogan_text">Because life writes the best Scripts</string>
    <!--NEW Entry Screen-->
    <string name="tv_new_entry_text">NEW ENTRY</string>
    <string name="til_new_entry_title_hint">Title</string>
    <string name="til_text">Text ...</string>
    <string name="btn_save">Save</string>
    <string name="storage_permission_denied">Permission denied.</string>
    <string name="new_entry">New entry</string>
    <string name="new_entry_text">What was special about today</string>
    <string name="weather_info">The weather was:</string>
    <string name="mood_text">Today has been:</string>
    <string name="crying">Very bad</string>
    <string name="sad">bad</string>
    <string name="neutral">Neutral</string>
    <string name="laughing">good</string>
    <string name="love">Very good</string>
    <string name="snow">Snow</string>
    <string name="rain">Rain</string>
    <string name="Cloud">Cloudy</string>
    <string name="cloud_sun">Changeable</string>
    <string name="sun">Sunny</string>
    <string name="enterTitle">Please enter a title.</string>
    <string name="enterText">Please enter a text.</string>
    <string name="selectMood">Please select an icon from the mood group.</string>
    <string name="selectWeather">Please select an icon from the weather group.</string>
    <string name="success">"Succeded"</string>
    <!--Detail Screen-->
    <string name="implemented_soon">This feature will be implemented soon!</string>
    <string name="deleted">Entry deleted!</string>
    <string name="cant_load_img">Can not load image!</string>
    <string name="cancel">Cancel</string>
    <string name="delete_question">Are you sure you want to delete this entry?</string>
    <string name="delete_entry">Delete Entry</string>
</resources>