<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_login_fhj_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:background="@color/pinkish_red"
            android:paddingLeft="@dimen/D100dp"
            android:paddingRight="@dimen/D100dp"
            android:paddingTop="@dimen/D32dp"
            android:paddingBottom="@dimen/D32dp"
            android:src="@drawable/unscriptedtext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_login_title_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_login_fhj_logo"
            android:layout_marginTop="@dimen/D32dp"
            android:gravity="center"
            android:textSize="@dimen/textsize_20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title"
            android:layout_margin="@dimen/D16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_email_24">

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_login_email_hint"
                android:padding="@dimen/D16dp"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/textsize_16sp"
                android:autofillHints="emailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_login_email"
            android:layout_margin="@dimen/D16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_login_password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/D16dp"
                android:textSize="@dimen/textsize_16sp"
                android:autofillHints="password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/D16dp"
            android:padding="@dimen/D8dp"
            android:text="@string/btn_login_login_text"
            android:textSize="@dimen/textsize_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_login_password"/>

        <LinearLayout
            android:id="@+id/ll_login_registernewaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login_login"
            android:layout_marginTop="@dimen/D64dp">

            <TextView
                android:id="@+id/tv_login_donthaveanaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login_donthaveanaccount_text"
                android:textSize="@dimen/textsize_16sp"
                android:padding="@dimen/D5dp"/>

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login_register_text"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_16sp"
                android:padding="@dimen/D5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_login_forgotpassword_text"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_login_registernewaccount"
            android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
