<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_new_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="New Entry"
            android:textSize="@dimen/tv_20sp_textsize" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_new_activity"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/et_8dp_margin">


            <TextView
                android:id="@+id/text_new_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_32dp_margin"
                android:layout_marginLeft="@dimen/et_16dp_margin"
                android:textStyle="bold"
                android:text="@string/new_entry"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_20sp_textsize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints,UnknownId" />

            <EditText
                android:id="@+id/et_new_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_32dp_margin"
                android:hint="What describes today the best?"
                android:layout_marginLeft="@dimen/et_16dp_margin"
                android:letterSpacing="0.2"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                android:maxLength="25"
                android:textSize="@dimen/btn_18sp_textsize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_new_date" />


            <EditText
                android:id="@+id/et_new_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_16dp_margin"
                android:justificationMode="inter_word"
                android:layout_margin="@dimen/et_16dp_margin"
                android:paddingLeft="@dimen/et_5dp_margin"
                android:paddingRight="@dimen/et_5dp_margin"
                android:paddingEnd="@dimen/et_16dp_margin"
                android:hint="@string/new_entry_text"
                android:lineSpacingExtra="@dimen/m2dp"
                android:textColor="@color/darkgrey"
                android:textAlignment="viewStart"
                android:textSize="@dimen/btn_18sp_textsize"
                android:inputType="textMultiLine"
                android:maxLines="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_new_title"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/et_32dp_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_new_text"/>
            <LinearLayout
                android:id="@+id/ll_new_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="@dimen/et_16dp_margin"

                android:layout_marginBottom="@dimen/et_16dp_margin"
                android:gravity="left|center"
                app:layout_constraintTop_toBottomOf="@+id/divider1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mood_text"
                    android:padding="@dimen/btn_8dp_padding"
                    android:textSize="@dimen/btn_18sp_textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"></TextView>


                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon1ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/crying"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon2ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/sad"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon3ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/neutral"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />
                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon4ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/smile"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />
                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon5ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/love"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_new_info"/>

            <LinearLayout
                android:id="@+id/ll_new_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="@dimen/et_16dp_margin"

                android:layout_marginBottom="@dimen/et_16dp_margin"
                android:gravity="left|center"
                app:layout_constraintTop_toBottomOf="@+id/divider2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_info"
                    android:padding="@dimen/btn_8dp_padding"
                    android:textSize="@dimen/btn_18sp_textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"></TextView>


                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon_weather_1_ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/snow"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon_weather_2_ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/rain"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon_weather_3_ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/cloud"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />
                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon_weather_4_ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/cloud_sun"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />
                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon_weather_5_ImageView"
                    android:layout_width="@dimen/Im_40dp"
                    android:layout_height="@dimen/Im_40dp"
                    android:background="@drawable/icon_item"
                    android:src="@drawable/sun"
                    android:padding="@dimen/btn_8dp_padding"
                    android:clickable="true"
                    android:focusable="true" />

            </LinearLayout>


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_new_weather"/>
            <TextView
                android:id="@+id/text_photo_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_32dp_margin"
                android:text="Photos"
                android:letterSpacing="0.2"
                android:textAlignment="viewStart"
                android:textSize="@dimen/btn_20sp_textsize"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/et_16dp_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_new_weather" />
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scrollbarSize="@dimen/sb_0dp"
                app:layout_constraintTop_toBottomOf="@+id/text_photo_entry">

                <LinearLayout
                    android:id="@+id/ll_photos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/et_16dp_margin"
                    android:layout_marginTop="@dimen/et_16dp_margin"
                    android:layout_marginBottom="@dimen/et_16dp_margin"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin_45dp"
        app:backgroundTint="@color/blue"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
        app:srcCompat="@drawable/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin_45dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
        app:srcCompat="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/greenlight" />
</androidx.constraintlayout.widget.ConstraintLayout>
